@@ -1687,6 +1687,12 @@ SUB menu_editor_keys (state AS MenuState, mstate AS MenuState, menudata AS MenuD
    IF intgrabber(menudata.max_chars, 0, 38) THEN state.need_update = YES
   CASE 13 ' border size
    IF intgrabber(menudata.bordersize, -100, 100) THEN state.need_update = YES
+  CASE 14:
+   IF enter_or_space() THEN
+    scriptbrowse menudata.on_close, plottrigger, "menu on-close plotscript"
+    state.need_update = YES
+   END IF
+   IF scrintgrabber(menudata.on_close, 0, 0, 75, 77, 1, plottrigger) THEN state.need_update = YES
  END SELECT
 END SUB
 
@@ -1849,6 +1855,7 @@ SUB update_menu_editor_menu(record, edmenu AS MenuDef, menu AS MenuDef)
  append_menu_item edmenu, "Minimum width: " & zero_default(menu.min_chars, "Automatic")
  append_menu_item edmenu, "Maximum width: " & zero_default(menu.max_chars, "None")
  append_menu_item edmenu, "Border size: " & zero_default(menu.bordersize)
+ append_menu_item edmenu, "On-close script: " & scriptname(menu.on_close, plottrigger)
 END SUB
 
 SUB update_detail_menu(detail AS MenuDef, mi AS MenuDefItem)
