@@ -26,4 +26,7 @@ Minimum width: raise this number to widen the horizontal margins on either side 
 
 Maximum width: Reduce this to restirct the width of the menu.
 
-Border Size: Use this to enlarge or shrink the empty space around the margin on all sides of the menu. Press - to switch between a negative or positive value.
+Border Size: Use this to enlarge or shrink the empty space around the margin on all sides of the menu. Press - to switch between a negative 
+or positive value.
+
+On-close script: This script is activated when the menu is closed. This script is only run when the user manually closes the menu. It is not used when you close a script using the "close menu" plotscripting command.
